--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li><a href="DiviserRegner.html">Diviser pour régner</a></li>
                 <li><a href="TypesAbstraits.html">Types abstraits</a></li>
                 <li><a href="Arbres.html">Arbres binaires</a></li>
+                <li><a href="Graphes.html">Graphes</a></li>
             </ol>
         </div>
     </body>
