--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 <li><a href="TypesAbstraits.html">Types abstraits</a></li>
                 <li><a href="Arbres.html">Arbres binaires</a></li>
                 <li><a href="Graphes.html">Graphes</a></li>
+                <li><a href="Dynamique.html">Programmation dynamique</a></li>
             </ol>
         </div>
     </body>
